--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.datasource.hikari.idle-timeout=60000
 
 spring.datasource.url=jdbc:postgresql://babar.db.elephantsql.com:5432/jdiuntwb
 spring.datasource.username=jdiuntwb
-spring.datasource.password=AVYMZkU9_oGQE8mRYF6FlUwDphsTJy2p
+spring.datasource.password=${DATA_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
