--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.hikari.minimum-idle=20
 spring.datasource.hikari.validation-timeout=3000
 spring.datasource.hikari.idle-timeout=60000
 
-spring.datasource.url=jdbc:postgresql://babar.db.elephantsql.com:5432/jdiuntwb
-spring.datasource.username=jdiuntwb
+spring.datasource.url=jdbc:postgresql://babar.db.elephantsql.com:5432/${DATA_USER}
+spring.datasource.username=${DATA_USER}
 spring.datasource.password=${DATA_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
