--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.datasource.url=jdbc:postgresql://babar.db.elephantsql.com:5432/${DATA_USE
 spring.datasource.username=${DATA_USER}
 spring.datasource.password=${DATA_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
+
+#A secret deveria estar como variável de ambiente, mas como esse é um projeto de aprendizado, vou deixar aqui
+spring.security.jwt.secret=9b1278db4cccea5f18381785a7c4e8432404c83c
+#12 horas
+spring.security.jwt.expiration=43200000
+
+springdoc.show-login-endpoint=true
